[project]
name = "heltour"
version = "1.0.1"
description = "A [hel]per for [tour]naments.  Intended to run swiss based tournaments, but is actually the source for the lichess4545.com leagues."
authors = [{ name = "Lakin Wecker", email = "lakin@structuredabstraction.com" }]
requires-python = "~=3.9"
license = "MIT"
dependencies = [
    "django==4.2.*",
    "django-reversion==5.0.*",
    "psycopg2-binary==2.9.9",
    "django-debug-toolbar==4.2.0",
    "responses==0.25.7",
    "django-bootstrap3==23.*",
    "gspread==0.4.1",
    "oauth2client==2.2.0",
    "django-ckeditor==6.7.0",
    "django-cacheops==7.0.*",
    "django-contrib-comments==2.2.0",
    "django-redis==5.4.0",
    "django-static-precompiler==2.4",
    "django-impersonate==1.9.1",
    "django-ipware==6.0.0",
    "redis==5.0.1",
    "websocket-client==1.6.4",
    "celery==5.3.6",
    "icalendar==5.0.11",
    "pillow==10.3.0",
    "pyfcm==1.3.1",
    "letsencrypt",
    "requests[security]>=2.32.4,<3",
    "django-stubs==4.2.6",
    "django-stubs-ext==4.2.5",
    "patchwork==1.0.1",
    "postgres>=4.0",
		"more-itertools>=10.7.0"
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.uv]
exclude-newer = "2025-06-04T00:00:00Z"

[tool.django-stubs]
django_settings_module = "heltour.settings"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html"

[project.scripts]
server = "heltour.commands:runserver"
apiworker = "heltour.commands:runapiworker"
test = "heltour.commands:test"
testcov = "heltour.commands:testcov"
showmigrations = "heltour.commands:showmigrations"
migrate = "heltour.commands:migrate"
tasks = "heltour.commands:celeryworker"
