[tool.poetry]
name = "heltour"
version = "1.0.1"
description = "A [hel]per for [tour]naments.  Intended to run swiss based tournaments, but is actually the source for the lots.lichess.ca leagues."
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "==4.2.*"
django-reversion = "==5.0.*"
psycopg2-binary = "==2.9.9"
django-debug-toolbar = "==4.2.0"
#requests[security] = "==2.22.0"
responses = "==0.25.7"
django-bootstrap3 = "==23.*"
gspread = "==0.4.1"
oauth2client = "==2.2.0"
django-ckeditor = "==6.7.0"
django-cacheops = "==7.0.*"
django-contrib-comments = "==2.2.0"
django-redis = "==5.4.0"
django-sass-processor = "^1.4"
libsass = "^0.23.0"
django-compressor = "^4.4"
django-impersonate = "==1.9.1"
django-ipware = "==6.0.0"
redis = "==5.0.1"
websocket-client = "==1.6.4"
celery = "==5.3.6"
icalendar = "==5.0.11"
pillow = "==10.3.0"
pyfcm = "==1.3.1"
letsencrypt = "*"
baste = { git = "https://bitbucket.org/strabs/baste.git", branch="release-2.2" }
requests = {extras = ["security"], version = "^2.32.4"}
django-stubs = "4.2.6"
django-stubs-ext = "4.2.5"
more-itertools = "^10.7.0"
invoke = "^2.2.0"
django-environ = "^0.12.0"
python-dotenv = "^1.1.1"
gunicorn = "^23.0.0"
faker = "^37.4.0"
django-celery-beat = "^2.8.1"
django-celery-results = "^2.5.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-countries = "^7.6.1"
babel = "^2.17.0"
fastapi = "==0.115.6"
uvicorn = {extras = ["standard"], version = "==0.32.1"}
pydantic = "==2.10.4"
scalar-fastapi = "==1.0.3"

[tool.poetry.dev-dependencies]
schemathesis = "==3.39.6"
hypothesis = "<6.131"
httpx = "==0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "heltour.settings"
